all .c files in src/ directory now get compiled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set (2do_VERSION_MINOR 1)
 set (2do_VERSION_PATCH 0)
 set (2do_VERSION_APPENDIX "-alpha")
 
+FILE(GLOB_RECURSE 2DO_SOURCE_FILES "src/*.c")
+
 configure_file(
   "${PROJECT_SOURCE_DIR}/src/2do.h.in"
   "${PROJECT_BINARY_DIR}/src/2do.h"
@@ -14,4 +16,4 @@ configure_file(
 
 include_directories(${PROJECT_BINARY_DIR})
 
-add_executable(2do src/2do.c)
+add_executable(2do ${2DO_SOURCE_FILES})
