--- a/src/info.h.in
+++ b/src/info.h.in
@@ -1,5 +1,5 @@
-#ifndef _2DO_H
-#define _2DO_H
+#ifndef _INFO_H
+#define _INFO_H
 
 #define VERSION_MAJOR "@2do_VERSION_MAJOR@"
 #define VERSION_MINOR "@2do_VERSION_MINOR@"
@@ -11,7 +11,6 @@
 #define USAGE "2do v" VERSION "\n" \
               "\n" \
               "Usage:\n" \
-              "  - none\n" \
-              "\n"
+              "  - none\n"
 
-#endif /* _2DO_H */
+#endif /* _INFO_H */
