added the remove functionality

--- a/src/info.h.in
+++ b/src/info.h.in
@@ -14,6 +14,7 @@
               "\n" \
               "Commands:\n" \
               "    help         shows this help message\n" \
-              "    add          adds an message to the todo file\n"
+              "    add          adds an message to the todo file\n" \
+              "    remove       remove one or more entries from todo file\n"
 
 #endif /* _INFO_H */
