added "list" command to output current tasks into a table

--- a/src/info.h.in
+++ b/src/info.h.in
@@ -15,6 +15,7 @@
               "Commands:\n" \
               "    help         shows this help message\n" \
               "    add          adds an message to the todo file\n" \
-              "    remove       remove one or more entries from todo file\n"
+              "    remove       remove one or more entries from todo file\n" \
+              "    list         list all the added todo tasks\n"
 
 #endif /* _INFO_H */
