--- a/src/info.h.in
+++ b/src/info.h.in
@@ -17,6 +17,7 @@
               "    add          adds an message to the todo file\n" \
               "    remove       remove one or more entries from todo file\n" \
               "    list         list all the added todo tasks\n" \
-              "    config       get and set configuration values\n" 
+              "    config       get and set configuration values\n" \
+              "    done         set a task to be done\n"
 
 #endif /* _INFO_H */
