--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,3 +60,5 @@ add_executable(2do ${2DO_SOURCE_FILES})
 
 install(TARGETS 2do DESTINATION /usr/bin)
 add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+
+add_subdirectory(lib)
